[package]
name = "erp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1",features = ["rt-multi-thread"]}
sqlx = "0.8.6"
redis = "0.32.5"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }